2010-04-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* curl-http.cpp|h: Update according to DownloaderRequest api changes.

2010-04-21  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile.am: Don't link with libmoon.la - this Makefile.am was
	likely copy-pasted from the other bridges before r153003

2010-04-14  Jeffrey Stedfast  <fejj@novell.com>

	* curl-bridge.cpp (getdata_callback): Need to return something
	here (since this is a pthread_create cb, we can safely return
	NULL).
	(HandleNode): Init res after calling parent ctor.
	(CURLNode): Init handle after calling parent ctor.

2010-04-10  Andreia Gaita  <avidigal@novell.com>

	* curl-bridge.cpp: add a few checks to prevent hangs when shutting
	down the bridge

2010-04-09  Andreia Gaita  <avidigal@novell.com>

	* curl-http.h: tweak the IsAborted check a bit

2010-04-09  Andreia Gaita  <avidigal@novell.com>

	* curl-bridge.[h|cpp]: use a Queue to store work handles, so it
	takes advantage of the Queue's locking facilities

2010-03-22  Andreia Gaita  <avidigal@novell.com>

	* curl-bridge.[h|cpp]: added IsDataThread helper method
	* curl-http.[h|cpp]: make aborting threadsafe. if a request is closed
	during header processing when the Started call is still queued on idle,
	wait for it before calling Finished

2010-03-22  Andreia Gaita  <avidigal@novell.com>

	* curl-bridge.[h|cpp]: move the multi curl handle up to the bridge
	so all requests are handled by it and all data from all connections
	can be pumped in one call (GetData). data is handled on a separate
	thread, and sent (AddCallback) out to the main thread via g_idle_add
	(Emit). when requests are done, connection handles are cached in a
	pool to be reused when needed.
	* curl-http.[h|cpp]: Add asynchronous support and remove all curl
	actions (except option settings), all work is now done by the bridge

2010-03-11  Andreia Gaita  <avidigal@novell.com>

	* curl-http.cpp: strip whitespaces from headers

2010-03-03  Andreia Gaita  <avidigal@novell.com>
